--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ li a:hover{
 	<li><a href="#home">CONTACT</a></li>
 	<li><a href="#admition">ADMITION</a></li>
 	<li><a href="#downloads">DOWNLOADS</a></li>
+	<li><a href="#downloads">GALLERY</a></li>
 </ul>
 <h1><br/><br/><br/>This is a Heading<br/>Another heading<br/>yet another heading</h1>
 <p>This is a paragraph.</p>
